FIX: enabled PHP mysql extension

--- a/.env
+++ b/.env
@@ -8,7 +8,8 @@ NGINX_HOST=localhost
 # PHP
 
 # See https://hub.docker.com/r/nanoninja/php-fpm/tags/
-PHP_VERSION=fpm-7.1
+#This is now defined on the file located in build/php-db2/Dockerfile
+#PHP_VERSION=fpm-7.1
 
 # MySQL
 MYSQL_VERSION=5.7.22
